--- a/package.json
+++ b/package.json
@@ -6,12 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "node ./src/scripts/lint.mjs --color --fix",
+    "lint:ci": "node ./src/scripts/lint.mjs --color"
   },
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.12"
+    "next": "14.2.12",
+    "chalk": "^5.3.0",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.11",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-sonarqube": "2.1.3",
+    "eslint-import-resolver-alias": "1.1.2",
+    "eslint-import-resolver-typescript": "3.6.1",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jest": "28.6.0",
+    "eslint-plugin-jest-dom": "5.4.0",
+    "eslint-plugin-jsx-a11y": "6.9.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "6.4.0",
+    "eslint-plugin-react": "7.34.3",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-sonarjs": "0.25.1",
+    "eslint-plugin-testing-library": "6.2.2"
   },
   "devDependencies": {
     "typescript": "^5",
