--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react": "^18",
     "react-dom": "^18",
     "next": "14.2.12",
+    "geist": "^1.3.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "chalk": "^5.3.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.11",
