--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "next": "14.2.12",
+    "axios": "^1.7.7",
     "geist": "^1.3.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
     "prettier-plugin-tailwindcss": "^0.6.5",
