--- a/package.json
+++ b/package.json
@@ -11,14 +11,12 @@
     "lint:ci": "node ./src/scripts/lint.mjs --color"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.12",
-    "axios": "^1.7.7",
-    "geist": "^1.3.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
-    "prettier-plugin-tailwindcss": "^0.6.5",
+    "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.7",
     "chalk": "^5.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.11",
     "eslint-config-prettier": "^9.1.0",
@@ -32,16 +30,24 @@
     "eslint-plugin-react": "7.34.3",
     "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-sonarjs": "0.25.1",
-    "eslint-plugin-testing-library": "6.2.2"
+    "eslint-plugin-testing-library": "6.2.2",
+    "geist": "^1.3.0",
+    "lucide-react": "^0.445.0",
+    "next": "14.2.12",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "react": "^18",
+    "react-dom": "^18",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.12",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.12"
+    "typescript": "^5"
   }
 }
