--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "axios": "^1.7.7",
     "@tanstack/react-query": "^5.51.23",
+    "axios": "^1.7.7",
     "chalk": "^5.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -41,6 +41,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
